--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -18,6 +18,7 @@ jobs:
               uses: actions/setup-node@v2
               with:
                   node-version: 14.x
+              run: npm install
             - name: ci
               run: npm ci
             - name: test
