--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -18,6 +18,8 @@ jobs:
               uses: actions/setup-node@v2
               with:
                   node-version: 14.x
+            - name: ci
+              run: npm ci
             - name: test
               run: npm test
             - name: format
