--- a/package.json
+++ b/package.json
@@ -44,6 +44,8 @@
   },
   "typescript": "tsc --project tsconfig.json --noEmit",
   "devDependencies": {
-    "eslint": "^8.21.0"
-  }
+    "eslint": "^8.21.0",
+    "prettier": "^2.7.1"
+  },
+  "prettier": "prettier src -check"
 }
