--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,11 +1,12 @@
 {
     "settings": {
         "react": {
-        "pragma": "React",
-        "version": "14.16.0"
+            "pragma": "React",
+            "version": "14.16.0"
         }
     },
     "env": {
+        "node": true,
         "browser": true,
         "es2021": true
     },
@@ -22,10 +23,6 @@
         "ecmaVersion": 12,
         "sourceType": "module"
     },
-    "plugins": [
-        "react",
-        "@typescript-eslint"
-    ],
-    "rules": {
-    }
+    "plugins": ["react", "@typescript-eslint"],
+    "rules": {}
 }
